--- a/style.css
+++ b/style.css
@@ -222,13 +222,13 @@ h3 {
 
 /*Col 2*/
 
-#more-stories-part {
+.more-stories-part {
 	padding-top: 14px;
 	padding-bottom: 10px;
 	border-top: 1px solid #ddd;
 }
 
-#image {
+.image {
 	float: left;
 	width: 135px;
 	margin-right: 15px;
@@ -275,7 +275,7 @@ h6 {
 	padding: 20px 0px;
 }
 
-#sponsored {
+.sponsored {
 	border: 1px solid #e6e6e6;
 	padding: 20px;
 }
